feat: added more feauters and added one-click demo login buttons and sidebar role switcher
